# server_model

./: .dockerignore  .env.example  Dockerfile  README.md  build.sh  build_scw.sh  docker-compose.yml  imagebuild.yaml  main.py  pyproject.toml  requirements.modal.txt  requirements.txt
.github/workflows/: release.yml
deployment/: .env.docker  deploy-docker.sh  docker-compose.yml  nginx-docker.conf
docs/: api.md  input_output_formats.md  modal_performance.md
example/: demo.ipynb
modal_app/: README.md  app.py  build.py  config.py  guards.py  image.py
src/metrics/: quantized_iou.py  threshold_accuracy.py
src/model/: glp_based_model.py
src/model/components/decoder/: GlpDecoder.py
src/model/components/decoder/blocks/: selective_feature_fusion.py
src/model/components/encoder/: mit.py
src/server/: bootstrap.py  cond_vec.py  controller.py  enums.py  interfaces.py  schemas.py
src/server/services/: download.py  image_processor.py  model_loader.py  onnx_model_loader.py  prediction.py  simulation.py  spec_service.py  torchscript_model_loader.py
src/utils/: viz.py
tests/: conftest.py  test_bootstrap.py  test_cond_vec.py  test_config.py  test_controller.py  test_guards.py  test_schemas.py  test_simulation.py  test_spec_service.py  test_web_app.py
